fix: Fix layout on mobile

--- a/public/css/research.css
+++ b/public/css/research.css
@@ -62,3 +62,11 @@ span.favorite {
     padding: 0 0.4em;
     background-color: #f4e8ed;
 }
+
+@media (max-width: 950px) and (max-height: 950px) {
+    html, body {
+        padding: 0.5em;
+
+        font-size: inherit;
+    }
+}
